--- a/Log_Checker_0.2/Requirements.txt
+++ b/Log_Checker_0.2/Requirements.txt
@@ -1,4 +1,5 @@
-1. Folder with '.log' files
-2. Change directory path in the script to your folder
-3. Python 3.8.10 #or newer, to check python version in cmd run 'py -V'
-4. Visual Studio Code with Python Extension to run a script
+1. Python 3.8.10 #or newer, to check python version in cmd run 'py -V'
+2. Install colorama module via cmd 'pip install colorama' or 'py -m pip install colorama'
+3. Visual Studio Code with Python Extension to run a script
+4. Folder with '.log' files
+5. Change directory path in the script to your folder
